tests/ui/compile-flags/invalid/emit-output-types-without-args.rs
//@ compile-flags: --emit

//~? RAW Argument to option 'emit' missing
